--- a/templates/landing/product_item.html
+++ b/templates/landing/product_item.html
@@ -17,12 +17,12 @@
             {{ product_image.product.description|truncatechars_html:70 }}
         </p>
         <div>
-            {{ product_image.product.price }} UAH
+            {{ product_image.product.price }} RUB
         </div>
         <div class="add-to-card-btn">
-            <button class="btn btn-success">
+            <!-- <button class="btn">
                 Добавить в корзину
-            </button>
+            </button> -->
         </div>
     </div>
 </div>
