--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,6 +1,5 @@
 <!-- Static navbar -->
     <nav class="navbar navbar-default navbar-top">
-        df
     </nav>
     <nav class="navbar navbar-default navbar-main">
       <div class="container">
@@ -11,23 +10,22 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="#">Мой магазин</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="/">Домой</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="/">Домой</a></li>
+            <!-- <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li> -->
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Товары <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
+                <li><a href="{% url 't-shirt' %}">Футболки</a></li>
+                <li><a href="{% url 'jackets' %}">Куртки</a></li>
+                <li><a href="{% url 'pants' %}">Штаны</a></li>
                 <li role="separator" class="divider"></li>
-                <li class="dropdown-header">Nav header</li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
+                <li><a href="{% url 'boots' %}">Ботинки</a></li>
+                <li><a href="{% url 'snikers' %}">Кросовки</a></li>
               </ul>
             </li>
           </ul>
