--- a/templates/orders/basket.html
+++ b/templates/orders/basket.html
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <h3 class="text-center">Товары в корзине</h3>
-                <h5 class="text-center">Общая стоимость: {{ request.session.basket.total_amount }} грн </h5>
+                <h5 class="text-center">Общая стоимость: {{ request.session.basket.total_amount }} руб </h5>
                         {{ request.session.basket.products }}
                 <ul>
                     {% for product in request.session.basket.products %}
